# fileagent

./: .gitignore  README.md  package.json
.github/workflows/: todo-to-issue.yml
app/: .eslintrc.js  .gitignore  README.md  components.json  next-i18next.config.js  next.config.js  package.json  plopfile.js  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
contracts/feed-parser/: Cargo.toml
contracts/feed-parser/src/: callbacks.rs  consts.rs  contract.rs  lib.rs  storage.rs  tests.rs
contracts/market-factory/: Cargo.toml  build.sh
contracts/prompt-wars/: Cargo.toml  README.md  build.sh
contracts/prompt-wars/src/: callbacks.rs  consts.rs  contract.rs  fees.rs  flags.rs  ft_receiver.rs  lib.rs  math.rs  modifiers.rs  outcome_token.rs  storage.rs  tests.rs  views.rs
contracts/shared/: Cargo.toml
database/: .gitignore  README.md  db.ts  install.sh  package.json  server.ts  tsconfig.json
database/config/: config.js
database/migrations/: 20231013033650-create-content_extractions.js  20231013060009-insert_is_public_field_to_content_extractions.js  20231013061204-insert_bucket_name_field_to_content_extractions.js  20231017160215-create-table-square_orders.js  20231017164014-rename-table_orders-to-square_orders.js  20240305170703-create-table_user_info.js  20240305172419-create-table_user_address.js  20240305174854-create-table_user_company.js  20240305174900-create-table_user_company_gt.js  20240310173106-create-table_user_session.js
database/models/: User.ts  (+8 more)
storeagentai/: medusa-config.js  package.json
storeagentai-storefront/: package-lock.json
(+576 files in other folders)
