[package]
name = "sbv2-near-feed-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
sbv2-near = { version = "0.1.0", features = ["testnet"] }
serde = "1.0.152"
shared = { path = "../shared", env = "testnet" }

[dev-dependencies]
chrono = "0.4.23"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
